@@ -1,104 +1,128 @@
 package store.novabook.store.user.member.service;
 
-import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
-import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
+import store.novabook.store.exception.AlreadyExistException;
+import store.novabook.store.exception.EntityNotFoundException;
 import store.novabook.store.point.entity.PointHistory;
+import store.novabook.store.point.entity.PointPolicy;
 import store.novabook.store.point.repository.PointHistoryRepository;
+import store.novabook.store.point.repository.PointPolicyRepository;
 import store.novabook.store.user.member.dto.CreateMemberRequest;
+import store.novabook.store.user.member.dto.CreateMemberResponse;
 import store.novabook.store.user.member.dto.GetMemberResponse;
+import store.novabook.store.user.member.dto.UpdateMemberRequest;
 import store.novabook.store.user.member.entity.Member;
+import store.novabook.store.user.member.entity.MemberGrade;
+import store.novabook.store.user.member.entity.MemberStatus;
 import store.novabook.store.user.member.entity.Users;
-import store.novabook.store.user.member.exception.MemberAlreadyExistsException;
-import store.novabook.store.user.member.exception.MemberNotFoundException;
+import store.novabook.store.user.member.repository.MemberGradeRepository;
 import store.novabook.store.user.member.repository.MemberRepository;
+import store.novabook.store.user.member.repository.MemberStatusRepository;
 import store.novabook.store.user.member.repository.UsersRepository;
 
 @RequiredArgsConstructor
 @Service
+@Transactional
 public class MemberService {
+
+	public static final String GRADE_COMMON = "일반";
+	public static final String STATUS_ACTIVE = "활동";
+	public static final String STATUS_DORMANT = "휴면";
+	public static final String STATUS_WITHDRAWN = "탈퇴";
+	public static final int TYPE = 1;
+	public static final long ID = 1L;
+	public static final String REGISTER_POINT = "회원가입 적립금";
+	public static final long POINT_AMOUNT = 5000L;
 
 	private final MemberRepository memberRepository;
 	private final UsersRepository usersRepository;
 	private final PointHistoryRepository pointHistoryRepository;
+	private final PointPolicyRepository pointPolicyRepository;
+	private final MemberGradeRepository memberGradeRepository;
+	private final MemberStatusRepository memberStatusRepository;
 
-	@Transactional
-	public Member createMember(CreateMemberRequest createMemberRequest) {
-		Users user = Users.builder().type(1).build();
+	public CreateMemberResponse createMember(CreateMemberRequest createMemberRequest) {
+
+		Users user = Users.builder().type(TYPE).build();
 		usersRepository.save(user);
 
-		Member member = Member.builder()
-			.users(user)
-			.loginId(createMemberRequest.loginId())
-			.loginPassword(createMemberRequest.loginPassword())
-			.name(createMemberRequest.name())
-			.number(createMemberRequest.number())
-			.email(createMemberRequest.email())
-			.birth(createMemberRequest.birth())
-			.latestLoginAt(LocalDateTime.now())
-			.build();
+		MemberGrade memberGrade = memberGradeRepository.findByName(GRADE_COMMON)
+			.orElseThrow(() -> new EntityNotFoundException(MemberGrade.class));
 
-		validateId(member.getId());
-		Member savedMember = memberRepository.save(member);
+		MemberStatus memberStatus = memberStatusRepository.findByName(STATUS_ACTIVE)
+			.orElseThrow(() -> new EntityNotFoundException(MemberStatus.class));
 
-		PointHistory pointHistory = new PointHistory(null, null, null, savedMember, "welcome 포인트 적립", 5000,
-			LocalDateTime.now(), null);
+		Member member = Member.of(createMemberRequest, memberStatus, memberGrade, user);
+
+		if (memberRepository.existsByLoginId(createMemberRequest.loginId())) {
+			throw new AlreadyExistException(Member.class);
+		}
+		Member newMember = memberRepository.save(member);
+
+		PointPolicy pointPolicy = pointPolicyRepository.findById(ID)
+			.orElseThrow(() -> new EntityNotFoundException(PointPolicy.class, ID));
+
+		PointHistory pointHistory = PointHistory.of(pointPolicy, newMember, REGISTER_POINT, POINT_AMOUNT);
 		pointHistoryRepository.save(pointHistory);
 
-		return savedMember;
+		return CreateMemberResponse.fromEntity(newMember);
+
 	}
 
+	@Transactional(readOnly = true)
 	public List<GetMemberResponse> getMemberAll() {
 		List<Member> memberList = memberRepository.findAll();
 		return memberList.stream()
 			.map(member -> new GetMemberResponse(member.getId(), member.getLoginId(), member.getName(),
 				member.getEmail()))
-			.collect(Collectors.toList());
+			.toList();
 	}
 
+	@Transactional(readOnly = true)
 	public GetMemberResponse getMember(Long memberId) {
-		Member member = memberRepository.findById(memberId).orElse(null);
-		if (member != null) {
-			return new GetMemberResponse(
-				member.getId(),
-				member.getLoginId(),
-				member.getName(),
-				member.getEmail());
-		}
-		throw new MemberNotFoundException();
+		Member member = memberRepository.findById(memberId)
+			.orElseThrow(() -> new EntityNotFoundException(Member.class, memberId));
+		return new GetMemberResponse(
+			member.getId(),
+			member.getLoginId(),
+			member.getName(),
+			member.getEmail());
+
 	}
 
-	@Transactional
-	public void updateMember(Long memberId, CreateMemberRequest createMemberRequest) {
-		Member member = memberRepository.findById(memberId).orElse(null);
-		if (member != null) {
-			member.update(createMemberRequest.loginId(), createMemberRequest.loginPassword(),
-				createMemberRequest.name(), createMemberRequest.number(), createMemberRequest.email(),
-				createMemberRequest.birth());
+	public void updateMember(Long memberId, UpdateMemberRequest updateMemberRequest) {
+		Member member = memberRepository.findById(memberId)
+			.orElseThrow(() -> new EntityNotFoundException(Member.class, memberId));
+		member.update(updateMemberRequest.loginPassword(),
+			updateMemberRequest.name(), updateMemberRequest.number(), updateMemberRequest.email()
+		);
+		memberRepository.save(member);
 
-			memberRepository.save(member);
-		}
-		throw new MemberNotFoundException();
 	}
 
-	@Transactional
-	public void deleteMember(Long memberId) {
-		Member member = memberRepository.findById(memberId).orElse(null);
-		if (member != null) {
-			memberRepository.delete(member);
-		}
-		throw new MemberNotFoundException();
+	public void updateMemberStatusToDormant(Long memberId) {
+		MemberStatus newMemberStatus = memberStatusRepository.findByName(STATUS_DORMANT)
+			.orElseThrow(() -> new EntityNotFoundException(MemberStatus.class, memberId));
+
+		Member member = memberRepository.findById(memberId)
+			.orElseThrow(() -> new EntityNotFoundException(Member.class, memberId));
+		member.updateMemberStatus(newMemberStatus);
+		memberRepository.save(member);
 	}
 
-	private void validateId(Long id) {
-		if (memberRepository.existsById(id)) {
-			throw new MemberAlreadyExistsException(id);
-		}
+	public void updateMemberStatusToWithdrawn(Long memberId) {
+		MemberStatus newMemberStatus = memberStatusRepository.findByName(STATUS_WITHDRAWN)
+			.orElseThrow(() -> new EntityNotFoundException(MemberStatus.class, memberId));
+
+		Member member = memberRepository.findById(memberId)
+			.orElseThrow(() -> new EntityNotFoundException(Member.class, memberId));
+		member.updateMemberStatus(newMemberStatus);
+		memberRepository.save(member);
 	}
 
 }
